syntax = "proto3";

package no.ion.mvndeps.proto;

option java_multiple_files = true;

message Builds {
  repeated Build builds = 1;
}

message Build {
  string groupId = 1;
  string artifactId = 2;
  string path = 3;
  sfixed64 buildTimeNanos = 4;
}
